--- a/notebook/2d_box_seg.ipynb
+++ b/notebook/2d_box_seg.ipynb
@@ -112,6 +112,14 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "seg, _ = nrrd.read(\"/media/liushifeng/KINGSTON/ULS DL3D 2D dataset/masks/002779_01_01_183_lesion_01_slice61_seg\")",
+   "id": "c47efa74517ceef7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "from train_utils import crop_from_img\n",
     "\n",
@@ -263,9 +271,6 @@
     "import numpy as np\n",
     "from torch.utils.data import DataLoader\n",
     "from dataset import SegmentationDataset\n",
-    "import albumentations as A\n",
-    "from albumentations.pytorch import ToTensorV2\n",
-    "from functools import partial\n",
     "\n",
     "image_dir = data_dir / \"images\"\n",
     "label_dir = data_dir / \"masks\"\n",
@@ -287,46 +292,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# transform functions\n",
-    "def clip_image(image, min_val, max_val, **kwargs):\n",
-    "    return np.clip(image, min_val, max_val)\n",
-    "\n",
-    "def rescale_image(image, min_val, max_val, **kwargs):\n",
-    "    return (image - min_val) / (max_val - min_val)\n",
-    "\n",
-    "def pass_through(mask, **kwargs):\n",
-    "    return mask\n",
-    "\n",
-    "v = -500, 1000\n",
-    "clip = partial(clip_image, min_val=v[0], max_val=v[1])\n",
-    "rescale = partial(rescale_image, min_val=v[0], max_val=v[1])\n",
-    "\n",
-    "val_transform = A.Compose([\n",
-    "    A.Lambda(image=clip, mask=pass_through),\n",
-    "    A.Lambda(image=rescale, mask=pass_through),\n",
-    "    ToTensorV2(),\n",
-    "])\n",
-    "\n",
-    "train_transform = A.Compose([\n",
-    "    A.Lambda(image=clip, mask=pass_through),\n",
-    "    A.Lambda(image=rescale, mask=pass_through),\n",
-    "\n",
-    "    # pixel\n",
-    "    A.GaussianBlur(blur_limit=5, p=0.5),\n",
-    "    A.GaussNoise(std_range=(0.01,0.05), per_channel=False, p=0.5),\n",
-    "\n",
-    "    # # spatial\n",
-    "    A.HorizontalFlip(p=0.5),\n",
-    "    A.VerticalFlip(p=0.5),\n",
-    "    A.Transpose(p=0.5),\n",
-    "    A.OpticalDistortion(distort_limit=(-0.5, -0.1), p=0.5),\n",
-    "    A.GridDistortion(p=0.5),  # adds some black edges?\n",
-    "    ToTensorV2(),\n",
-    "])\n",
+    "from transforms import train_transform, val_transform\n",
     "\n",
     "image_names = None\n",
     "batch_size = 1\n",
-    "workers = 1\n",
+    "workers = 20\n",
     "train_dataset = SegmentationDataset(image_dir, label_dir, train_images, train_transform)\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=workers)\n",
     "\n",
@@ -348,6 +318,12 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Train Model",
+   "id": "956e15960762c2b5"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import warnings\n",
@@ -355,21 +331,12 @@
     "import torch\n",
     "import lightning as L\n",
     "from lightning.pytorch.callbacks import EarlyStopping\n",
-    "import segmentation_models_pytorch as smp\n",
     "\n",
     "torch.set_float32_matmul_precision('medium')\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "device"
    ],
    "id": "7a149f50f5d1f802",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "len(train_names) + len(val_names)",
-   "id": "52a64016174ce151",
    "outputs": [],
    "execution_count": null
   },
@@ -383,8 +350,7 @@
     "early_stopping = EarlyStopping('val_loss', verbose=True)\n",
     "trainer = L.Trainer(\n",
     "    accumulate_grad_batches=32,\n",
-    "    max_epochs=100,\n",
-    "    limit_val_batches=1,\n",
+    "    max_epochs=20,\n",
     "    callbacks=[early_stopping]\n",
     ")\n",
     "trainer.fit(unet, train_loader, val_loader)"
@@ -396,16 +362,8 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "data['mask'].mean()",
-   "id": "d1f6ecca272623f5",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "fp",
-   "id": "b0d13cc4c00b0328",
+   "source": "trainer.early_stopping_callback.stopped_epoch",
+   "id": "d0706e994bb4f694",
    "outputs": [],
    "execution_count": null
   },
@@ -414,22 +372,67 @@
    "cell_type": "code",
    "source": [
     "# visualize data and model output\n",
-    "data = next(iter(val_loader))\n",
-    "out = unet.model.to(device)(data['input'].to(device)).detach().cpu().squeeze()\n",
-    "out = out > 0.5\n",
+    "from torchmetrics.segmentation import DiceScore\n",
     "\n",
-    "tp = data['mask'].bool().squeeze() & out.bool().squeeze()\n",
-    "fp = ~data['mask'].bool().squeeze() & out.bool().squeeze()\n",
-    "fn = data['mask'].bool().squeeze() & ~out.bool().squeeze()\n",
+    "dice = DiceScore(1)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=True, num_workers=workers)\n",
     "\n",
-    "plt.figure(figsize=(3,3))\n",
-    "plt.imshow(data['input'].squeeze()[0], cmap='gray')\n",
-    "plt.imshow(tp, cmap=transparent_cmap(\"limegreen\"), alpha=0.5)\n",
-    "plt.imshow(fp, cmap=transparent_cmap(\"red\"), alpha=0.5)\n",
-    "plt.imshow(fn, cmap=transparent_cmap(\"blue\"), alpha=0.5)\n",
-    "# plt.imshow(out, cmap=transparent_cmap(\"green\"), alpha=0.3);"
+    "res = []\n",
+    "n = 0\n",
+    "for i, data in tqdm(enumerate(val_loader)):\n",
+    "# data = next(iter(val_loader))\n",
+    "    img = data['input'].squeeze()[0]\n",
+    "    out_raw = unet.model.to(device)(data['input'].to(device)).detach().cpu().squeeze()\n",
+    "    out = out_raw.clone()\n",
+    "    out[out < 0.5] = 0\n",
+    "\n",
+    "    gt = data['mask'].bool().squeeze()\n",
+    "    pred = out.bool().squeeze()\n",
+    "\n",
+    "    tp = gt & pred\n",
+    "    fp = ~gt & pred\n",
+    "    fn = gt & ~pred\n",
+    "\n",
+    "    dice_score = dice(pred.unsqueeze(0), gt.unsqueeze(0))\n",
+    "    dice_scores.append(dice_score.item())\n",
+    "\n",
+    "    vol_sim = 1 - abs(pred.sum() - gt.sum()) / gt.sum()\n",
+    "    vol_scores.append(vol_sim.item())\n",
+    "\n",
+    "    res.append({\"dice\": dice_score.item(), \"vs\": vol_sim.item()})\n",
+    "    # if fp.sum() + fn.sum() > max(70, (0.6 * tp.sum())):\n",
+    "    if False:\n",
+    "        print(dice_score)\n",
+    "        fig, ax = plt.subplots(1, 3, figsize=(6,2))\n",
+    "        ax[0].imshow(img, cmap='gray')\n",
+    "\n",
+    "        ax[1].imshow(img, cmap='gray')\n",
+    "        ax[1].imshow(out * tp, cmap=transparent_cmap(\"green\"), alpha=0.4)\n",
+    "        ax[1].imshow(out * fp, cmap=transparent_cmap(\"red\"), alpha=0.4)\n",
+    "        ax[1].imshow(fn, cmap=transparent_cmap(\"blueviolet\"), alpha=0.4)\n",
+    "\n",
+    "        ax[2].imshow(out, vmin=0, vmax=1, cmap=\"summer_r\", alpha=1)\n",
+    "\n",
+    "        [a.axis('off') for a in ax]\n",
+    "        plt.show()\n",
+    "        n += 1\n",
+    "\n",
+    "    if n > 1e10:\n",
+    "        break\n"
    ],
    "id": "534ad06ac9cabe1c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.DataFrame(res).describe()"
+   ],
+   "id": "730fddcb6c658b85",
    "outputs": [],
    "execution_count": null
   }
